--- a/app/src/main/res/layout/info_same_2.xml
+++ b/app/src/main/res/layout/info_same_2.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
         android:background="@color/white">
         <RelativeLayout
