--- a/app/src/main/res/layout/teacher_person_info.xml
+++ b/app/src/main/res/layout/teacher_person_info.xml
@@ -8,8 +8,9 @@
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="50dp"
             android:layout_alignTop="@id/teacher_name"
             android:layout_alignBottom="@id/teacher_academy"
             android:src="@mipmap/women"/>
@@ -18,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/image"
+            android:layout_marginLeft="45dp"
             android:text="@string/teacher_name"/>
         <ImageView
             android:id="@+id/sex"
