--- a/app/src/main/res/layout/find_the_key.xml
+++ b/app/src/main/res/layout/find_the_key.xml
@@ -6,15 +6,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#8FC5CF">
+        android:layout_height="@dimen/title_height"
+        android:background="#8FC5CF"
+        android:orientation="horizontal">
         <ImageView
             android:id="@+id/find_key_back"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="32px"
+            android:layout_height="54px"
             android:layout_weight="1"
+            android:layout_gravity="center"
             android:onClick="back"
-            android:src="@mipmap/nav_icon_back_3"/>
+            android:src="@mipmap/back1"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -25,7 +27,7 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"
                 android:text="@string/find_the_key"
-                android:textSize="20sp"
+                android:textSize="48px"
                 android:textColor="#FFFFFF"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"/>
@@ -39,11 +41,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginTop="54px"
+        android:layout_marginBottom="54px"
+        android:layout_marginLeft="24px"
         android:text="@string/identity_authentication"
-        android:textSize="20sp"/>
+        android:textSize="48px"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,7 +55,9 @@
             android:id="@+id/input_phone_number_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_marginTop="54px"
+            android:layout_marginBottom="54px"
+            android:layout_marginLeft="24px"
             android:background="@android:color/transparent"
             android:hint="@string/input_phone_number_hint"
             android:textSize="15sp"/>
@@ -66,31 +70,40 @@
         android:orientation="horizontal">
         <EditText
             android:id="@+id/input_verification_code_hint"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:layout_margin="15dp"
+            android:layout_marginTop="54px"
+            android:layout_marginLeft="24px"
+            android:layout_marginBottom="54px"
             android:background="@android:color/transparent"
             android:hint="@string/input_verification_code_hint"
-            android:textSize="15sp"/>
-        <Button
-            android:id="@+id/get_verification_code"
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
+            android:textSize="48px"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="#FFFACD"
-            android:text="@string/get_verification_code"/>
+            android:orientation="vertical">
+            <Button
+                android:id="@+id/get_verification_code"
+                android:layout_width="240px"
+                android:layout_height="96px"
+                android:layout_marginRight="24px"
+                android:layout_gravity="right"
+                android:background="@drawable/rect_corner"
+                android:text="@string/get_verification_code"
+                android:textSize="36px"
+                android:textColor="@color/white"/>
+        </LinearLayout>
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginTop="54px"
+        android:layout_marginBottom="54px"
+        android:layout_marginLeft="24px"
         android:background="@android:color/transparent"
         android:text="@string/set_new_key"
-        android:textSize="20sp"/>
+        android:textSize="48px"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -100,7 +113,9 @@
             android:id="@+id/input_the_new_key_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_marginTop="54px"
+            android:layout_marginBottom="54px"
+            android:layout_marginLeft="24px"
             android:background="@android:color/transparent"
             android:password="true"
             android:hint="@string/input_the_new_key_hint"
@@ -115,32 +130,24 @@
             android:id="@+id/input_the_new_key_again_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_marginTop="54px"
+            android:layout_marginBottom="54px"
+            android:layout_marginLeft="24px"
             android:background="@android:color/transparent"
             android:password="true"
             android:hint="@string/input_the_new_key_again_hint"
             android:textSize="15sp"/>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginTop="30dp">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
-        <Button
-            android:id="@+id/confirm_1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/confirm"
-            android:background="#FFFACD"/>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
-    </LinearLayout>
+    <Button
+        android:id="@+id/confirm_1"
+        android:layout_width="1030px"
+        android:layout_height="150px"
+        android:layout_marginTop="136px"
+        android:layout_marginLeft="25px"
+        android:gravity="center"
+        android:background="#8FC5CF"
+        android:text="@string/confirm"
+        android:textSize="48px"
+        android:textColor="@color/white"/>
 
 </LinearLayout>
