--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="item_height">40dp</dimen>
     <dimen name="pic_height">15dp</dimen>
     <dimen name="head">44dp</dimen>
+    <dimen name="title_height">50dp</dimen>
 </resources>
